# needle

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conftest.py  environment.yml  pixi.toml  pyproject.toml  pytest.ini  renovate.json  ruff.toml  sitecustomize.py
.github/: codecov.yml  dependabot.yml
.github/workflows/: benchmark.yml  build.yml  check-changed-files.yml  ci.yml  lint.yml  pyright.yml  python-package-conda.yml  style.yml  test.yml  update-lockfiles.yml
apps/: __init__.py  cifar.py  mnist_needle.py  mnist_numpy.py  resnet9.py  resnet_mnist.py  train_resnet.py  train_utils.py  tree_bank.py
apps/models/: __init__.py  language_model.py  resnet9.py
backends/: CMakeLists.txt  ndarray_backend_cuda.cu  pixi.toml
backends/cpu/: CMakeLists.txt  elementwise.cc  matmul.cc  ndarray.cc  ndarray_backend_cpu.cc  pixi.toml  reductions.cc  scalar_ops.cc
backends/cpu/src/: elementwise.cc  ndarray_backend_cpu.cc  reductions.cc  scalar_ops.cc
backends/gpu/: CMakeLists.txt
backends/numpy/: pixi.toml  pyproject.toml
backends/numpy/numpy_backend/: __init__.py  device.py
backends/numpy/src/numpy_backend/: __init__.py  array_api.py  numpy_backend.py
benchmarks/: test_conv.py  test_import_time.py  test_matmul.py  test_matmul_benchmarks.py  test_resnet_artificial.py  test_resnet_mnist.py  test_sequence_cells.py  test_sequence_models.py  test_training_epoch.py
hw0/: Cargo.toml  hw0.ipynb  pyproject.toml
hw0/src/: lib.rs  simple_ml.py
hw0/tests/: test_simple_ml.py
hw1/: hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py  ops.py
hw1/tests/: test_autograd_hw.py
hw2/apps/: mlp_resnet.py
hw2/python/needle/: __init__.py  autograd.py  data.py  init.py  nn.py  ops.py  optim.py
hw2/tests/: test_data.py  test_nn_and_optim.py
hw3/: CMakeLists.txt  hw3.ipynb
hw3/python/needle/: data.py  optim.py
hw3/python/needle/backend_ndarray/: ndarray.py
hw3/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
hw3/tests/: test_ndarray.py
nn_implementations/: convolution_implementation.ipynb  rnn_implementation.ipynb  transformer_implementation.ipynb
notebooks/: hw0.ipynb  hw3.ipynb
python/needle/: __init__.py  autograd.py  backend_numpy.py  backend_selection.py  errors.py  nn.py  ops.py  optim.py  tensor.py
python/needle/autograd/: __init__.py  graph_ops.py  value.py
python/needle/backend_ndarray/: __init__.py  array_api.py  backend.py  backend_numpy.py  device.py  ndarray.py  ndarray_backend_numpy.py  utils.py
python/needle/data/: __init__.py  dataloader.py  dataset.py  nlp.py  transforms.py
python/needle/data/datasets/: __init__.py  artificial_mnist.py  cifar10.py  cifar10_dataset.py  mnist.py  ndarray.py  synthetic_mnist.py
python/needle/init/: __init__.py  init_basic.py  init_distributions.py
python/needle/needle_typing/: __init__.py  device.py  tensor_args.py
python/needle/nn/: __init__.py  activations.py  conv.py  core.py  dropout.py  embedding.py  linear.py  nn_basic.py  norms.py  sequence.py  softmax.py
python/needle/ops/: __init__.py  conv.py  elementwise.py  logarithmic.py  mathematic.py  op.py  ops_logarithmic.py  ops_mathematic.py  ops_tuple.py  scalar.py  shape.py  view.py
python/needle/optim/: __init__.py  adam.py  base.py  sgd.py
python/needle/typing/: __init__.py  array_interface.py  device.py  dlpack.py  tensor_args.py  types.py  utils.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
src/cpu/: elementwise.cc  matmul.cc  ndarray.cc  ndarray_backend_cpu.cc  reductions.cc  scalar_ops.cc
tests/: devices.py  gradient_check.py  hypothesis_strategies.py  test_autograd.py  test_backward.py  test_benchmarks.py  test_cifar_ptb_data.py  test_conv.py  test_data.py  test_data_transforms.py  test_init.py  test_language_models.py  test_mnist_data.py  test_mnist_numpy.py  test_nd_backend.py  test_ndarray.py  test_ndarray_device.py  test_nlp.py  test_nn.py  test_ops.py  test_optim.py  test_resnet9.py  test_sequence_models.py  utils.py
tests/autograd/: test_autograd.py
tests/backend/: test_array_api.py  test_array_interop.py  test_ndarray_device.py  test_ndarray_math.py  test_ndarray_shape_ops.py
tests/datasets/: test_artificial_mnist.py  test_cifar_10.py  test_mnist.py  test_ndarray_data.py  test_penn_treebank.py  test_synthetic_mnist.py
tests/init/: test_init.py
tests/models/: test_language_models.py  test_resnet9.py  test_sequence_models.py
tests/nn/: __init__.py  sequence_test_config.py  test_activations.py  test_conv.py  test_core.py  test_dropout.py  test_embedding.py  test_linear.py  test_nn.py  test_nn_training.py  test_norms.py  test_sequence_cells.py  test_sequence_models.py  test_softmax.py
tests/ops/: test_conv.py  test_dilate.py  test_elementwise.py  test_logarithmic.py  test_mathematic.py  test_scalar.py  test_shape.py  test_view.py  utils.py
tests/optim/: test_optim.py
tests/test_datasets/: test_cifar_10.py  test_mnist.py  test_penn_treebank.py  test_tree_bank.py
